@@ -33,6 +33,9 @@ Library
 
 - Issue #22165: SimpleHTTPRequestHandler now supports undecodable file names.
 
+- Issue #8797: Raise HTTPError on failed Basic Authentication immediately.
+  Initial patch by Sam Bull.
+
 - Issue #20729: Restored the use of lazy iterkeys()/itervalues()/iteritems()
   in the mailbox module.
 
